--- a/printer_data/config/telegram.conf
+++ b/printer_data/config/telegram.conf
@@ -2,8 +2,8 @@
 
 [bot]
 server: 192.168.2.16:7125
-chat_id: 861929
-bot_token: 6744460544:AAGmQCJk3MFe-Y8xEXSEF3VNPYGEXjZ1KIQ
+chat_id: xxxxxxx
+bot_token: xxxxxx
 light_device: leds_camara
 #power_device: printer
 debug: true
